<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/faq_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="FAQ's"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/ques1"
        android:textColor="@android:color/background_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold|italic"/>
    <TextView
        android:textSize="16sp"
        android:text="@string/ans1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ques2"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
    <TextView
        android:textSize="16sp"
        android:text="@string/ans2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="bold|italic"
        android:textColor="@android:color/background_dark"
        android:text="@string/ques3"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/ans3"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        android:text="@string/ques4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/ans4"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>